ok i managed to break the retina image AGAIN and i messed up the animation but ehhhh fixed both

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -20,10 +20,10 @@ $intui: #e53500;
     @include transform(translate(0px,100px));
   }
   50% {
-    @include transform(translate(230px,0px));
+    @include transform(translate(250px,0px));
   }
   75% {
-    @include transform(translate(230px,100px));
+    @include transform(translate(250px,100px));
   }
   100% {
     @include transform(translate(0px,0px));
@@ -116,7 +116,7 @@ div.os .illustration {
 (min-resolution: 192dpi) {
   /* About */
   div.abt .illustration {
-    background-image: url('../images/illustrations/about/monitor_x2.png');
+    background-image: url('../images/illustrations/about/monitor_2x.png');
   }
 
   .mouse {
